[package]
name = "pglx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
clap = { version = "4.4.13", features = ["derive"] }
color-eyre = "0.6.2"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"] }
ureq = { version = "2.8.0", features = ["json"], default-features = false }
