[package]
name = "pglx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.9", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.32"
tera = "1.20.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"] }
ureq = { version = "2.10.0", features = ["json"], default-features = false }

[dev-dependencies]
rstest = "0.21.0"
